@@ -16,6 +16,7 @@ CHANGE: UI    | Open Torrent Window now asks to create directories if they don't
 CHANGE: UI    | Added download status to the General torrent view [amc1]
 CHANGE: UI    | User Comment field more useful in General torrent view - easy edit link, hyperlink formatting, auto-resizing [amc1]
 CHANGE: UI    | "Show Transfer Bar" menu option is now a checkbox menu item - so you can now hide the transfer bar using the menu item [amc1]
+CHANGE: Plug  | Added setVisible method for plugin menu items.
                 
 BUGFIX: Core  | Fixed bug where renaming a download in some conditions would generate "Target is sub-directory" errors [amc1]                
 BUGFIX: Core  | Fixed swarm view rendering bug where some incomplete peers were shown as full circles [The8472]
